# CombinatorialVerification

./: CMakeLists.txt  cor_test.py  test.py
nonrecursive/: CMakeLists.txt  main.c  shared_sumset.c  shared_sumset.h  sumset_pool.h  sumset_stack.c  sumset_stack.h
parallel/: main.c  parallel_worker.h  pool.h  safe_stack.h  smart_sumset.h
testing_scripts/: cor_test.py  graph.ipynb  test.py
